[gd_scene load_steps=3 format=3 uid="uid://dvvpuuph1wfc1"]

[ext_resource type="Script" path="res://world/pipe_wall/pipe_wall_spawner.gd" id="1_7ux7m"]
[ext_resource type="PackedScene" uid="uid://c3s4ynl35d56m" path="res://world/pipe_wall/pipe_wall.tscn" id="2_qgelb"]

[node name="PipeWallSpawner" type="Marker2D"]
script = ExtResource("1_7ux7m")
_pipe_wall_scene = ExtResource("2_qgelb")

[node name="PositionGizmo" type="ReferenceRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2

[node name="RangeTop" type="Marker2D" parent="."]
position = Vector2(0, -88)

[node name="PositionGizmo" type="ReferenceRect" parent="RangeTop"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_right = 8.0
grow_horizontal = 2
grow_vertical = 2

[node name="RangeBottom" type="Marker2D" parent="."]
position = Vector2(0, 88)

[node name="PositionGizmo" type="ReferenceRect" parent="RangeBottom"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_right = 8.0
grow_horizontal = 2
grow_vertical = 2

[node name="Timer" type="Timer" parent="."]
wait_time = 5.1

[node name="Pipes" type="Node2D" parent="."]
